# neural_news

components/moderation_service/: pyproject.toml  setup.py
components/parser_service/: pyproject.toml  setup.py
components/publishing_service/: pyproject.toml  setup.py
components/web_service/: pyproject.toml  setup.py
