[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-service"
version = "0.1.0"
description = "Web service for Neural News Platform"
readme = "README.md"
authors = [
    {name = "Dmitry Ilyenko", email = "ilyenkod@yandex.ru"}
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=0.15.0",
    "httpx>=0.19.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.812",
]

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
